my-app/main/default/objects/Bulk_Object_18__c/Bulk_Object_18__c.object-meta.xml
<CustomObject
     >
    <historyRetentionPolicy n1:nil="true" />
    <label>Bulk Object 18</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bulk Objects 18</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>