my-app/main/default/objects/Bulk_Object_18__c/fields/Process4__c.field-meta.xml
<CustomField>
    <fullName>Process4__c</fullName>
    <label>Test Field 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>