my-app/main/default/objects/Bulk_Object_18__c/fields/Process5__c.field-meta.xml
<CustomField>
    <fullName>Process5__c</fullName>
    <label>Test Field 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>