my-app/main/default/objects/Bulk_Object_18__c/fields/Process7__c.field-meta.xml
<CustomField>
    <fullName>Process7__c</fullName>
    <label>Test Field 7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>